--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/media.css" />
+
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                 <source src="video/main-video.mp4" type="video/mp4">
             </video>
             <header class="site-head col-md-10 col-md-offset-1">
-                <h1 class=" text-hide logo">Kramer
+                <h1 class="text-hide logo">Kramer
                     <img src="img/logo.png" alt="">
                 </h1>
                 <div class="dropdown visible-xs">
@@ -51,8 +52,8 @@
             </span>
         </section>
         <section class="about-us">
-            <header class="sticky-header col-md-10">
-                <h1 class=" text-hide logo">Kramer
+          <header class="sticky-header col-md-10">
+                <h1 class="text-hide logo">Kramer
                     <img src="img/logo.png" alt="">
                 </h1>
                 <div class="dropdown visible-xs">
@@ -74,8 +75,9 @@
                 </nav>
             </header>
             <div class="container">
-                <header class="section-header row">
+                <header class="section-header">
                     <h3>About</h3>
+                </header>
                 <p class="col-md-offset-2 col-md-8">
                     This is Photoshop's version of Lorem Ipsum.
                     Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin,
@@ -84,7 +86,7 @@
                     Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu
                     in elit.
                 </p>
-                </header>
+                <div class="clearfix"></div>
                 <ul class="options row">
                     <li class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0">
                         <h4>Services</h4>
@@ -115,15 +117,15 @@
              <header class="section-header">
                  <h3>Portfolio</h3>
              </header>
-             <ul class="portfolio-filter">
+             <ul id="list" class="portfolio-filter">
                  <li data-filter-by="*"><a href="#">All</a></li>
                  <li data-filter-by=".designe"><a href="#">Design</a></li>
                  <li data-filter-by=".web"><a href="#">Web</a></li>
                  <li data-filter-by=".illustration"><a href="#">Illustration</a></li>
                  <li data-filter-by=".motion"><a href="#">Motion</a></li>
              </ul>
-             <ul class="portfolio-item row ">
-                 <li class="col-sm-6 col-md-4">
+             <ul id="grid" class="portfolio-item">
+                 <li class="col-sm-6 col-md-4 item designe">
                      <div class="portfolio-img-wrap">
                          <img src="img/top-left.png">
                          <div class="img-item-hover">
@@ -132,7 +134,7 @@
                          </div>
                      </div>
                  </li>
-                 <li class="col-sm-6 col-md-4">
+                 <li class="col-sm-6 col-md-4 item illustration">
                      <div class="portfolio-img-wrap">
                          <img src="img/top-middle.png">
                          <div class="img-item-hover">
@@ -141,7 +143,7 @@
                          </div>
                      </div>
                  </li>
-                 <li class="col-sm-6 col-md-4">
+                 <li class="col-sm-6 col-md-4 item designe">
                      <div class="portfolio-img-wrap">
                          <img src="img/top-right.png">
                          <div class="img-item-hover">
@@ -150,7 +152,7 @@
                          </div>
                      </div>
                  </li>
-                 <li class="col-sm-6 col-md-4">
+                 <li class="col-sm-6 col-md-4 item web">
                      <div class="portfolio-img-wrap">
                          <img src="img/bottom-left.png">
                          <div class="img-item-hover">
@@ -159,7 +161,7 @@
                          </div>
                      </div>
                  </li>
-                 <li class="col-sm-6 col-md-4">
+                 <li class="col-sm-6 col-md-4 item motion">
                      <div class="portfolio-img-wrap">
                          <img src="img/bottom-middle.png">
                          <div class="img-item-hover">
@@ -168,7 +170,7 @@
                          </div>
                      </div>
                  </li>
-                 <li class="col-sm-6 col-md-4">
+                 <li class="col-sm-6 col-md-4 item web">
                      <div class="portfolio-img-wrap">
                          <img src="img/bottom-right.png">
                          <div class="img-item-hover">
@@ -288,18 +290,9 @@
  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
  <script src="lib/isotop/isotop.min.js"></script>
+ <script src="lib/isotop/isotop.js"></script>
 
- <!--<script type="text/javascript">
-     $(function () {
-         var $grid = $('#grid').isotope({
-             itemSelector: '#grid .item',
-             layoutMode: 'fitRows'
-         });
-         $('#list li').on('click', function () {
-             $grid.isotope({filter: $(this).attr('data-filter-by')});
-         });
-     });
- </script>-->
+
 </body>
 </html>
 
