--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
  <div class="content">
         <section class="intro">
-            <video autoplay loop muted class="bgvideo hidden-xs" id="bgvideo" >
+            <video autoplay loop muted class="bgvideo" id="bgvideo" >
                 <!--<source src="video/Big-Apple.mp4" type="video/mp4">
                 <source src="video/Big-Apple.webm" type="video/web">
                 <source src="video/main-video.mkv" type="video/mkv">
